Add Customer class, add customer book list activity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="title_activity_login">Sign in</string>
     <string name="add_item">Add New Item</string>
     <string name="action_logout">Logout</string>
+    <string name="action_rentNewBook">Rent Book</string>
+
+    <string name="customer_main_rent_new_book">Rent New Book</string>
 </resources>
