--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="search_book">Search Book</string>
     <string name="action_logout">Logout</string>
     <string name="action_rentNewBook">Rent Book</string>
+    <string name="back_customer_main">Rent List</string>>
 
     <string name="customer_main_rent_new_book">Rent New Book</string>
 </resources>
